[package]
name = "FindMiiEditor"
version = "0.1.0"
authors = ["Kitlith <kitlith@kitl.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#serde_yaml = "0.8"
#toml = "0.5"
byteorder = "1.3.4"
structopt = "0.3"
rand = { version = "0.7", features = ["small_rng"] }
binread = "1.4.1"
binwrite = "0.2.1"
